--- a/compression_technique.html
+++ b/compression_technique.html
@@ -24,8 +24,10 @@
         <div class="article">
           <header class="article-header">
             <h1 class="article-title">圧縮技法</h1>
+            <p class="article-date">post: xxxx/xx/xx, update: xxxx/xx/xx</p>
           </header>
           <article class="article-content">
+            <p>そのうち・・・</p>
           </article>
           <footer class="article-footer">
           </footer>
