--- a/index.html
+++ b/index.html
@@ -24,15 +24,11 @@
         <ul class="articles">
           <li class="article-link">
             <a href="./encryption_and_decryption.html">暗号化と復号化</a>
-            <span class="article-date">post: 2018/12/10, update: 2018/12/10</span>
+            <span class="article-date">post: xxxx/xx/xx, update: xxxx/xx/xx</span>
           </li>
           <li class="article-link">
             <a href="./compression_technique.html">圧縮技法</a>
-            <span class="article-date">post: 2018/12/10, update: 2018/12/10</span>
-          </li>
-          <li class="article-link">
-            <a href="./compression_technique.html">記事3</a>
-            <span class="article-date">post: 2018/12/10, update: 2018/12/10</span>
+            <span class="article-date">post: xxxx/xx/xx, update: xxxx/xx/xx</span>
           </li>
         </ul>
       </div>
