--- a/encryption_and_decryption.html
+++ b/encryption_and_decryption.html
@@ -24,10 +24,10 @@
         <div class="article">
           <header class="article-header">
             <h1>暗号化と復号化</h1>
-            <p class="article-date">post: 2018/12/10, update: 2018/12/10</p>
+            <p class="article-date">post: xxxx/xx/xx, update: xxxx/xx/xx</p>
           </header>
           <article class="article-content">
-            <p></p>
+            <p>そのうち・・・</p>
           </article>
           <footer class="article-footer">
           </footer>
