--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
             <a href="./compression_technique.html">圧縮技法</a>
             <span class="article-date">post: xxxx/xx/xx, update: xxxx/xx/xx</span>
           </li>
+          <li class="article-link">
+            <a href="./relationship_between_os_and_app.html">OSとアプリケーションの関係</a>
+            <span class="article-date">post: xxxx/xx/xx, update: xxxx/xx/xx</span>
+          </li>
         </ul>
       </div>
     </div>
