reset_css_cache

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
             <a href="./relationship_between_os_and_app.html">OSとアプリケーションの関係</a>
             <span class="article-date">post: xxxx/xx/xx, update: xxxx/xx/xx</span>
           </li>
+          <li class="article-link">
+            <a href="./reset_css_cache.html">CSSのキャッシュによりデザインが更新されないのを防ぐ</a>
+            <span class="article-date">post: xxxx/xx/xx, update: xxxx/xx/xx</span>
+          </li>
         </ul>
       </div>
     </div>
