--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </li>
           <li class="article-link">
             <a href="./reset_css_cache.html">CSSのキャッシュによりデザインが更新されないのを防ぐ</a>
-            <span class="article-date">post: xxxx/xx/xx, update: xxxx/xx/xx</span>
+            <span class="article-date">post: 2018/12/13, update: 2018/12/13</span>
           </li>
         </ul>
       </div>
