--- a/relationship_between_os_and_app.html
+++ b/relationship_between_os_and_app.html
@@ -27,10 +27,10 @@
             <p class="article-date">post: xxxx/xx/xx, update: xxxx/xx/xx</p>
           </header>
           <article class="article-content">
-            <p>プログラミングはなぜ動くのか(第2版)のめっも</p>
+            <p><a href="https://shop.nikkeibp.co.jp/front/commodity/0000/P83150/" target="_blank">プログラミングはなぜ動くのか(第2版)</a>のめっも</p>
             <h2>システム・コール</h2>
             <p>
-            Sのハードウェア制御機能は、一般的に小さな関数の集合体として提供されている。
+            OSのハードウェア制御機能は、一般的に小さな関数の集合体として提供されている。
             これらの関数、および関数を呼び出す行為のことをシステム・コールと呼ぶ。
             </p>
             <h2>OSと高水準言語によって、ハードウェアを抽象化できる</h2>
