--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
             <a href="./reset_css_cache.html">CSSのキャッシュによりデザインが更新されないのを防ぐ</a>
             <span class="article-date">post: 2018/12/13, update: 2018/12/13</span>
           </li>
+          <li class="article-link">
+            <a href="./dog_officer.html">いぬのおまわりさん</a>
+            <span class="article-date">post: 2018/12/13, update: 2018/12/13</span>
+          </li>
         </ul>
       </div>
     </div>
