--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
             <a href="./dog_officer.html">いぬのおまわりさん</a>
             <span class="article-date">post: 2018/12/13, update: 2018/12/13</span>
           </li>
+          <li class="article-link">
+            <a href="./display_doclist_of_vimplugins.html">Vimにインストール済みのプラグインのdoc一覧を表示する</a>
+            <span class="article-date">post: 2018/12/15, update: 2018/12/15</span>
+          </li>
         </ul>
       </div>
     </div>
