--- a/specialkey_in_combination_with_ctrl.html
+++ b/specialkey_in_combination_with_ctrl.html
@@ -31,7 +31,7 @@
             <p class="article-date">post: 2018/12/19, update: 2018/12/19</p>
           </header>
           <article class="article-content">
-            <p>最近<a href="http://files.kaoriya.net/docs/SpartanVim/SpartanVim-1.0-online.pdf" target="_blank">スパルタンVim</a>を読んでいるんですが、その中でESCなどの特殊キーはCtrlキーとの組み合わせで表現できるという情報がありました。</p>
+            <p>最近<a href="http://files.kaoriya.net/docs/SpartanVim/SpartanVim-1.0-online.pdf" target="_blank">スパルタンVim</a>を読んでいるんですが、その中でESCなどの特殊キーはCtrlキーとの組み合わせで表現できるとのことで</p>
             <pre><code>
               ESC: Ctrl+[
               TAB: Ctrl+I
