--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
       <div class="wrap">
         <ul class="articles">
           <li class="article-link">
+            <a href="./ vim_replace.html">Vimの置換コマンド</a>
+            <span class="article-date">post: 2019/1/4, update: 2019/1/4</span>
+          </li>
+          <li class="article-link">
             <a href="./specialkey_in_combination_with_ctrl.html">特殊キーをCtrlとの組み合わせで表現する</a>
             <span class="article-date">post: 2018/12/19, update: 2018/12/19</span>
           </li>
