--- a/dog_officer.html
+++ b/dog_officer.html
@@ -14,8 +14,8 @@
     <div class="site-header">
       <div class="wrap">
         <a class="site-title" href="/">residenti ぶろぐ</a>
-        <a class="sns-icon" href="https://twitter.com/v_residenti" target="_blank"><i class="fab fa-twitter"></i></a>
-        <a class="sns-icon" href="https://github.com/residenti" target="_blank"><i class="fab fa-github"></i></a>
+        <a class="sns-icon" href="https://twitter.com/v_residenti" target="_blank" rel="noopener"><i class="fab fa-twitter"></i></a>
+        <a class="sns-icon" href="https://github.com/residenti" target="_blank" rel="noopener"><i class="fab fa-github"></i></a>
       </div>
     </div>
 
