--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <div class="site-content">
       <div class="wrap">
         <ul class="articles">
-          <li class="article-link">
-            <a href="./vim_plugins.html">利用中のVimプラグイン列挙しとく</a>
-            <span class="article-date">post: 2019/01/30, update: 2019/01/30</span>
-          </li>
+          <!-- <li class="article-link">                                                        -->
+          <!--   <a href="./vim_plugins.html">利用中のVimプラグイン列挙しとく</a> -->
+          <!--   <span class="article-date">post: 2019/01/30, update: 2019/01/30</span>         -->
+          <!-- </li>                                                                            -->
           <li class="article-link">
             <a href="./linux_command_test_&&.html">test -r ~/.bashrc && . ~/.bashrc を読み解く</a>
             <span class="article-date">post: 2019/01/09, update: 2019/01/09</span>
