comment out twitter link

--- a/display_doclist_of_vimplugins.html
+++ b/display_doclist_of_vimplugins.html
@@ -19,7 +19,7 @@
     <div class="site-header">
       <div class="wrap">
         <a class="site-title" href="/">residenti ぶろぐ</a>
-        <a class="sns-icon" href="https://twitter.com/v_residenti" target="_blank" rel="noopener"><i class="fab fa-twitter"></i></a>
+        <!-- <a class="sns-icon" href="https://twitter.com/v_residenti" target="_blank" rel="noopener"><i class="fab fa-twitter"></i></a> -->
         <a class="sns-icon" href="https://github.com/residenti" target="_blank" rel="noopener"><i class="fab fa-github"></i></a>
         <a class="sns-icon" href="https://qiita.com/residenti" target="_blank" rel="noopener"><i class="fa fa-search"></i></a>
         <a class="sns-icon" href="https://teratail.com/users/residenti" target="_blank" rel="noopener"><i class="fas fa-angle-up"></i></a>
